css/styles.css
::selection {
  background: #0d144a;
  color: #fff;
}
::-moz-selection {
  background: #0d144a;
  color: #fff;
}

body{
    overflow-x: hidden;
}

.owl-carousel{
    height: 40pc;
    overflow: hidden;
}

.owl-item img{
    margin-top: 2.8em;
}

.image-overlay-text{
    margin-top: -190px;
    font-size: 3em;
    color: #fff;
}

.candidate-names{
    font-size:28px;
    color:#e32f33;
    margin-top: 15px;
}

.candidate-title{
    margin-top: 10px;
    font-size: 20px;
}

.candidate-header{
    text-align: left;
    margin-top: 20px;
    font-size: 30px;
    margin-right: 5%;
    padding: 5px;
    padding-top: 7px;
    background-color: #0d144a;
    color: #fff;
    border-radius: 2px;
    border: 2px solid #0d144a;
}

.candidate-header:hover{
    border: 2px solid #0d144a;
    background-color: #fff;
    color: #0d144a;
    cursor: pointer;
    transition: .2s;
}

.info-bullets{
    font-size: 16px;
    margin-top: 7px;
    margin-right: 5%;
    text-align: left;
    margin-left: 15px;
    line-height: 22px;
    display: none;
}

.issue-header{
    font-size: 32px;
    padding: 15px;
    color: #fff;
    background-color: #0d144a;
    margin-right: -1000px;
    margin-left: 15px;
}

.issue-text{
    font-size: 22px;
    margin-top: 12px;
    line-height: 32px;
    margin-left: 15px;
}

.platform-desc{
    color: #fff;
    display: none;
}

.issue-image{
    border: 1px solid #0d144a;
    border-radius:15px;
    height:200px;
    margin:auto;
    margin-bottom: 15px;
}

.student-image{
    height: 220px;
    overflow: hidden;
}

.student-text{
    margin-top:-20px;
    z-index:100;
    padding:5px;
    color: #fff;
    background-color: #0d144a;
    margin-bottom: 20px;
    line-height: 20px;
}

.timeline-text{
    font-size: 25px;
    line-height: 35px;
}

.contact-text{
    font-size:24px;
}

.snap-pic{
    margin:auto;
    width:300px;
}

.candidate-top-box{
    font-weight:100;
    cursor:default;
}

.noselect {
  -webkit-touch-callout: none; /* iOS Safari */
  -webkit-user-select: none;   /* Chrome/Safari/Opera */
  -khtml-user-select: none;    /* Konqueror */
  -moz-user-select: none;      /* Firefox */
  -ms-user-select: none;       /* IE/Edge */
  user-select: none;           /* non-prefixed version, currently
                                  not supported by any browser */
}

@media screen and (max-width: 1100px){
    .owl-carousel{
        height: 100%;
    }
    
    .student-text{
        font-size: 10px;
    }
    
    .student-image{
        height: 158px
    }
    
    .candidate-title{
        font-size: 17px
    }
    
    .candidate-top-box{
        font-size:19px !important;
    }
    
    .issue-text{
        font-size: 20px;
    }
    
    .platform-desc{
        font-size: 12px;
    }
}

@media screen and (max-width:680px) {
    .timeline-text{
        font-size: 12px;
        line-height: 19px;
    }
    
    .contact-text{
        font-size: 18px;
    }
    
    .issue-header{
        font-size: 20px;
    }
    
    .issue-text{
        font-size: 14px;
        line-height: 20px;
    }
    
    .candidate-header{
        font-size: 25px;
    }
    
    .info-bullets{
        font-size: 14px;
    }
    
    .owl-item img{
        margin-top: 0;
    }
    
    .owl-carousel{
        height: 100%;
    }
    
    .candidate-names{
        font-size: 21px;
    }
    
    .snap-pic{
        width: 200px;
    }
    
    .platform-desc{
        font-size: 14px;
    }
}

